--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="YOUR_PACKAGE_NAME" >
+    package="com.Yun.UniFight" >
 	<!-- Put your package name here. -->
 
-	 <uses-sdk android:minSdkVersion="14"/>
+	 <uses-sdk android:minSdkVersion="16"/>
 
     <!-- [START gcm_permission] -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- Put your package name here. -->
-    <permission android:name="YOUR_PACKAGE_NAME.permission.C2D_MESSAGE"
+    <permission android:name="com.Yun.UniFight.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
     <!-- Put your package name here. -->
-    <uses-permission android:name="YOUR_PACKAGE_NAME.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.Yun.UniFight.permission.C2D_MESSAGE" />
     <!-- [END gcm_permission] -->
 
     <application
@@ -56,7 +56,7 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <!-- Put your package name here. -->
-                <category android:name="YOUR_PACKAGE_NAME" />
+                <category android:name="com.Yun.UniFight" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
             </intent-filter>
         </receiver>
